# pretix-abimania-theme

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_abimania_theme/: apps.py  signals.py
pretix_abimania_theme/locale/de_Informal/LC_MESSAGES/: django.po
pretix_abimania_theme/static/pretix_abimania_theme/css/: abimania.css
pretix_abimania_theme/static/pretix_abimania_theme/js/: header.js  seating-map.js
pretix_abimania_theme/templates/pretix_abimania_theme/: front_page_top.html  global_html_head.html
